--- a/env.yml
+++ b/env.yml
@@ -19,8 +19,11 @@ dependencies:
   - numpy=1.18.1=py38h7241aed_0
   - numpy-base=1.18.1=py38h6575580_1
   - openssl=1.1.1d=h1de35cc_3
+  - pandas=1.0.0=py38h6c726b0_0
   - pip=20.0.2=py38_1
   - python=3.8.1=h359304d_1
+  - python-dateutil=2.8.1=py_0
+  - pytz=2019.3=py_0
   - readline=7.0=h1de35cc_5
   - scipy=1.3.1=py38h1410ff5_0
   - setuptools=45.1.0=py38_0
